# OrbitalForge

./: .gitignore  .swp  AGENTS.md  CMakeLists.txt  CMakePresets.json  OrbitalForge_7-Day_Modern_CPP_Bootcamp.md  OrbitalForge_Daily_Schedule.xlsx  codebase_snapshot.md  orbitalforge_to_md.py
apps/orbitalforge_cli/: main.cpp
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  orbitalforge  orbitalforge_tests-b12d07c_include.cmake
docs/: setup.md
examples/: integrator_comparison.cpp
include/orbitalforge/app/: benchmark.hpp  parse_error.hpp  scenario.hpp  scenario_parser.hpp
include/orbitalforge/io/: csv_writer.hpp  metadata_writer.hpp  simulation_output_writer.hpp
include/orbitalforge/math/: vec3.hpp
include/orbitalforge/physics/: body.hpp  diagnostics.hpp  gravity.hpp  integrator.hpp  state.hpp  system_state.hpp
include/orbitalforge/simulation/: integrator_kind.hpp  simulation_runner.hpp  step.hpp
include/orbitalforge/statistics/: sample_statistics.hpp
runs/solar_system/: diagnostics.csv  metadata.txt
scenarios/: solar_system.orbit  two_body.orbit
scripts/: generate_learning_workbook.py
src/app/: benchmark.cpp  scenario.cpp  scenario_parser.cpp
src/io/: csv_writer.cpp  metadata_writer.cpp  simulation_output_writer.cpp
src/math/: vec3.cpp
src/physics/: body.cpp  diagnostics.cpp  gravity.cpp  integrator.cpp
src/simulation/: integrator_kind.cpp  simulation_runner.cpp  step.cpp
src/statistics/: sample_statistics.cpp
tests/: orbitalforge_cli_smoke.cmake  test_advanced_integrators.cpp  test_benchmark.cpp  test_body.cpp  test_diagnostics.cpp  test_gravity.cpp  test_integrator.cpp  test_integrator_kind.cpp  test_sample_statistics.cpp  test_scenario.cpp  test_scenario_parser.cpp  test_simulation_runner.cpp  test_simulation_step.cpp  test_system_state.cpp  test_vec3.cpp
